--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -7,6 +7,7 @@ metadata:
   name: person-service
 spec:
   replicas: 1
+  revisionHistoryLimit: 3
   selector:
     matchLabels:
       app: person-service
