--- a/base/service.yaml
+++ b/base/service.yaml
@@ -8,5 +8,6 @@ spec:
   selector:
     app: person-service
   ports:
-    - port: 50051
+    - name: grpc
+      port: 50051
       targetPort: grpc
