--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -4,3 +4,26 @@ kind: Kustomization
 
 resources:
   - ../../base
+
+patches:
+  - path: deployment.yaml
+  - target:
+      kind: GRPCRoute
+      name: person-service-route
+    patch: |-
+      - op: add
+        path: /spec/rules/0/matches/0/headers
+        value: []
+      - op: add
+        path: /spec/rules/0/matches/0/headers/-
+        value:
+          name: x-subdomain
+          type: Exact
+          value: www
+  - target:
+      kind: Service
+      name: person-service
+    patch: |-
+      - op: add
+        path: /spec/selector/environment
+        value: production
