--- a/base/grpc-route.yaml
+++ b/base/grpc-route.yaml
@@ -19,3 +19,11 @@ spec:
           name: person-service
           port: 50051
           weight: 1
+    - matches:
+        - method:
+            service: "*"
+      backendRefs: []
+      filters:
+        - type: RequestRedirect
+          requestRedirect:
+            statusCode: 404
