--- a/overlays/preview/deployment.yaml
+++ b/overlays/preview/deployment.yaml
@@ -2,16 +2,16 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    environment: local
+    environment: preview
   name: person-service
 spec:
   selector:
     matchLabels:
-      environment: local
+      environment: preview
   template:
     metadata:
       labels:
-        environment: local
+        environment: preview
     spec:
       containers:
         - name: app
