--- a/overlays/sandbox/kustomization.yaml
+++ b/overlays/sandbox/kustomization.yaml
@@ -26,6 +26,13 @@ patches:
           backendRefs:
             - name: person-service
               port: 50051
+              group: ''
+              kind: Service
+              weight: 1
+          matches:
+            - path:
+                type: PathPrefix
+                value: /
   - target:
       kind: Service
       name: person-service
