--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: ghcr.io/gitops-ci-cd/person-service:5321defb239e7c1e0fb8b79f2274b9b754f05a03
+          image: person-service
           env:
             - name: PORT
               value: "50051"
